--- a/Shop shelf scanner/View/Base.lproj/Main.storyboard
+++ b/Shop shelf scanner/View/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -93,6 +94,13 @@
                                 <rect key="frame" x="0.0" y="91" width="390" height="644"/>
                                 <accessibility key="accessibilityConfiguration" identifier="imageBox"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qKY-5g-RF2">
+                                <rect key="frame" x="10" y="742" width="108" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="108" id="VrP-FT-ZlO"/>
+                                    <constraint firstAttribute="height" constant="72" id="o51-3s-Xal"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lwP-ge-Ow8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -102,7 +110,9 @@
                             <constraint firstItem="lwP-ge-Ow8" firstAttribute="bottom" secondItem="pnK-1p-cig" secondAttribute="bottom" constant="10" id="F3e-6s-2VZ"/>
                             <constraint firstItem="hcS-N1-awz" firstAttribute="top" secondItem="lwP-ge-Ow8" secondAttribute="top" id="VX2-cG-fgf"/>
                             <constraint firstItem="hcS-N1-awz" firstAttribute="leading" secondItem="lwP-ge-Ow8" secondAttribute="leading" id="hSI-CP-e1F"/>
+                            <constraint firstItem="qKY-5g-RF2" firstAttribute="top" secondItem="hcS-N1-awz" secondAttribute="bottom" constant="7" id="vXm-z7-vlt"/>
                             <constraint firstItem="pnK-1p-cig" firstAttribute="centerX" secondItem="uD6-e9-q1Z" secondAttribute="centerX" id="wIe-kk-91p"/>
+                            <constraint firstItem="qKY-5g-RF2" firstAttribute="leading" secondItem="lwP-ge-Ow8" secondAttribute="leading" constant="10" id="ylt-Vx-DxZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="slu-ir-CqN">
@@ -112,14 +122,23 @@
                                 <segue destination="1Qo-aL-JUg" kind="presentation" identifier="SettingsSegue" id="kyo-jo-AvX"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="eo7-rc-bg7">
-                            <connections>
-                                <action selector="logOutTapped:" destination="EkS-ou-RZh" id="LD2-3p-68w"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Log Out" id="eo7-rc-bg7">
+                                <connections>
+                                    <action selector="logOutTapped:" destination="EkS-ou-RZh" id="LD2-3p-68w"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Log Out" image="photo.on.rectangle.angled" catalog="system" id="LFw-ze-6pP" userLabel="Gallery">
+                                <connections>
+                                    <action selector="galleryTapped:" destination="EkS-ou-RZh" id="9b2-7A-fpd"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="imageBox" destination="hcS-N1-awz" id="vgY-Bo-f9Z"/>
+                        <outlet property="lastPhotoImageView" destination="qKY-5g-RF2" id="bEa-za-Z0P"/>
+                        <segue destination="OAj-P1-Nuc" kind="show" identifier="GallerySegue" id="QTo-Pp-tGt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hG-Xa-XL9" sceneMemberID="firstResponder"/>
@@ -292,6 +311,60 @@
             </objects>
             <point key="canvasLocation" x="1841.5384615384614" y="673.93364928909955"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="4d9-Ak-2xY">
+            <objects>
+                <viewController id="OAj-P1-Nuc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dzd-Zj-G56">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="m9f-hf-Cmq">
+                                <rect key="frame" x="6" y="91" width="374" height="690"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uOH-kh-cih">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="97y-g9-vPN" customClass="PhotoCollectionViewCell" customModule="Shop_shelf_scanner" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="50f-sn-OIg">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4f5-1R-v5E">
+                                                    <rect key="frame" x="2" y="2" width="124" height="124"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4f5-1R-v5E" firstAttribute="leading" secondItem="50f-sn-OIg" secondAttribute="leading" constant="2" id="Asc-E1-N6W"/>
+                                                <constraint firstAttribute="trailing" secondItem="4f5-1R-v5E" secondAttribute="trailing" constant="2" id="mTm-8h-wRI"/>
+                                                <constraint firstItem="4f5-1R-v5E" firstAttribute="top" secondItem="50f-sn-OIg" secondAttribute="top" constant="2" id="wSP-Qm-eHH"/>
+                                                <constraint firstAttribute="bottom" secondItem="4f5-1R-v5E" secondAttribute="bottom" constant="2" id="x0e-Qo-spR"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="photoContentView" destination="50f-sn-OIg" id="aRT-ip-8CD"/>
+                                            <outlet property="photoImageView" destination="4f5-1R-v5E" id="4qr-Hg-wPP"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="aek-SG-J0g"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lIV-s5-rb8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Ty-NL-VyD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2840" y="-33.412322274881518"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="5YW-07-LNg">
             <objects>
@@ -314,6 +387,7 @@
     <resources>
         <image name="camera.viewfinder" catalog="system" width="128" height="115"/>
         <image name="gear" catalog="system" width="128" height="122"/>
+        <image name="photo.on.rectangle.angled" catalog="system" width="128" height="98"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
