--- a/Shop shelf scanner/View/Base.lproj/Main.storyboard
+++ b/Shop shelf scanner/View/Base.lproj/Main.storyboard
@@ -138,7 +138,7 @@
                     <connections>
                         <outlet property="imageBox" destination="hcS-N1-awz" id="vgY-Bo-f9Z"/>
                         <outlet property="lastPhotoImageView" destination="qKY-5g-RF2" id="bEa-za-Z0P"/>
-                        <segue destination="OAj-P1-Nuc" kind="show" identifier="GallerySegue" id="QTo-Pp-tGt"/>
+                        <segue destination="U1S-li-kFq" kind="show" identifier="GallerySegue" id="k9z-ZO-Uzk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hG-Xa-XL9" sceneMemberID="firstResponder"/>
@@ -311,59 +311,55 @@
             </objects>
             <point key="canvasLocation" x="1841.5384615384614" y="673.93364928909955"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="4d9-Ak-2xY">
+        <!--Gallery Collection View Controller-->
+        <scene sceneID="4uf-Iu-11J">
             <objects>
-                <viewController id="OAj-P1-Nuc" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dzd-Zj-G56">
+                <collectionViewController id="U1S-li-kFq" customClass="GalleryCollectionViewController" customModule="Shop_shelf_scanner" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Tn9-gq-EFg">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="m9f-hf-Cmq">
-                                <rect key="frame" x="6" y="91" width="374" height="690"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uOH-kh-cih">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="97y-g9-vPN" customClass="PhotoCollectionViewCell" customModule="Shop_shelf_scanner" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="50f-sn-OIg">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4f5-1R-v5E">
-                                                    <rect key="frame" x="2" y="2" width="124" height="124"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="4f5-1R-v5E" firstAttribute="leading" secondItem="50f-sn-OIg" secondAttribute="leading" constant="2" id="Asc-E1-N6W"/>
-                                                <constraint firstAttribute="trailing" secondItem="4f5-1R-v5E" secondAttribute="trailing" constant="2" id="mTm-8h-wRI"/>
-                                                <constraint firstItem="4f5-1R-v5E" firstAttribute="top" secondItem="50f-sn-OIg" secondAttribute="top" constant="2" id="wSP-Qm-eHH"/>
-                                                <constraint firstAttribute="bottom" secondItem="4f5-1R-v5E" secondAttribute="bottom" constant="2" id="x0e-Qo-spR"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <connections>
-                                            <outlet property="photoContentView" destination="50f-sn-OIg" id="aRT-ip-8CD"/>
-                                            <outlet property="photoImageView" destination="4f5-1R-v5E" id="4qr-Hg-wPP"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="aek-SG-J0g"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="lIV-s5-rb8"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8Ty-NL-VyD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4am-aT-Xkr">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="5"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="97y-g9-vPN" customClass="PhotoCollectionViewCell" customModule="Shop_shelf_scanner" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="5" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="50f-sn-OIg">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4f5-1R-v5E">
+                                            <rect key="frame" x="2" y="2" width="124" height="124"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="4f5-1R-v5E" firstAttribute="leading" secondItem="50f-sn-OIg" secondAttribute="leading" constant="2" id="Asc-E1-N6W"/>
+                                        <constraint firstAttribute="trailing" secondItem="4f5-1R-v5E" secondAttribute="trailing" constant="2" id="mTm-8h-wRI"/>
+                                        <constraint firstItem="4f5-1R-v5E" firstAttribute="top" secondItem="50f-sn-OIg" secondAttribute="top" constant="2" id="wSP-Qm-eHH"/>
+                                        <constraint firstAttribute="bottom" secondItem="4f5-1R-v5E" secondAttribute="bottom" constant="2" id="x0e-Qo-spR"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="photoContentView" destination="50f-sn-OIg" id="aRT-ip-8CD"/>
+                                    <outlet property="photoImageView" destination="4f5-1R-v5E" id="4qr-Hg-wPP"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="U1S-li-kFq" id="ahf-AK-YC1"/>
+                            <outlet property="delegate" destination="U1S-li-kFq" id="WdI-6U-tlY"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="gmh-8W-gVL"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y3C-PF-ger" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2840" y="-33.412322274881518"/>
+            <point key="canvasLocation" x="2992" y="-33"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5YW-07-LNg">
