--- a/Shop shelf scanner/View/Base.lproj/Main.storyboard
+++ b/Shop shelf scanner/View/Base.lproj/Main.storyboard
@@ -77,6 +77,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hcS-N1-awz">
+                                <rect key="frame" x="0.0" y="91" width="390" height="649"/>
+                                <accessibility key="accessibilityConfiguration" identifier="imageBox"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pnK-1p-cig">
                                 <rect key="frame" x="155" y="740" width="80" height="60"/>
                                 <constraints>
@@ -90,26 +94,35 @@
                                     <action selector="cameraTapped:" destination="EkS-ou-RZh" eventType="touchUpInside" id="ox6-CJ-iBp"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hcS-N1-awz">
-                                <rect key="frame" x="0.0" y="91" width="390" height="644"/>
-                                <accessibility key="accessibilityConfiguration" identifier="imageBox"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TH2-tg-ztI">
+                                <rect key="frame" x="-5" y="91" width="395" height="648"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qKY-5g-RF2">
-                                <rect key="frame" x="10" y="742" width="108" height="72"/>
+                                <rect key="frame" x="10" y="747" width="108" height="72"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="108" id="VrP-FT-ZlO"/>
                                     <constraint firstAttribute="height" constant="72" id="o51-3s-Xal"/>
                                 </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aox-VP-H1D">
+                                <rect key="frame" x="-5" y="91" width="130" height="649"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lwP-ge-Ow8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="lwP-ge-Ow8" firstAttribute="trailing" secondItem="hcS-N1-awz" secondAttribute="trailing" id="3ll-4Q-8ac"/>
+                            <constraint firstItem="hcS-N1-awz" firstAttribute="top" secondItem="lwP-ge-Ow8" secondAttribute="top" id="6j0-YN-HD4"/>
                             <constraint firstItem="pnK-1p-cig" firstAttribute="top" secondItem="hcS-N1-awz" secondAttribute="bottom" constant="5" id="7VZ-nA-lfD"/>
+                            <constraint firstItem="hcS-N1-awz" firstAttribute="trailing" secondItem="lwP-ge-Ow8" secondAttribute="trailing" id="9c7-R0-26L"/>
                             <constraint firstItem="lwP-ge-Ow8" firstAttribute="bottom" secondItem="pnK-1p-cig" secondAttribute="bottom" constant="10" id="F3e-6s-2VZ"/>
+                            <constraint firstItem="hcS-N1-awz" firstAttribute="leading" secondItem="lwP-ge-Ow8" secondAttribute="leading" id="RHq-Dk-BgU"/>
                             <constraint firstItem="hcS-N1-awz" firstAttribute="top" secondItem="lwP-ge-Ow8" secondAttribute="top" id="VX2-cG-fgf"/>
                             <constraint firstItem="hcS-N1-awz" firstAttribute="leading" secondItem="lwP-ge-Ow8" secondAttribute="leading" id="hSI-CP-e1F"/>
+                            <constraint firstItem="pnK-1p-cig" firstAttribute="top" secondItem="hcS-N1-awz" secondAttribute="bottom" id="ngA-eg-Wrp"/>
                             <constraint firstItem="qKY-5g-RF2" firstAttribute="top" secondItem="hcS-N1-awz" secondAttribute="bottom" constant="7" id="vXm-z7-vlt"/>
                             <constraint firstItem="pnK-1p-cig" firstAttribute="centerX" secondItem="uD6-e9-q1Z" secondAttribute="centerX" id="wIe-kk-91p"/>
                             <constraint firstItem="qKY-5g-RF2" firstAttribute="leading" secondItem="lwP-ge-Ow8" secondAttribute="leading" constant="10" id="ylt-Vx-DxZ"/>
@@ -136,8 +149,10 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="cameraView" destination="TH2-tg-ztI" id="1Z5-nf-Csu"/>
                         <outlet property="imageBox" destination="hcS-N1-awz" id="vgY-Bo-f9Z"/>
                         <outlet property="lastPhotoImageView" destination="qKY-5g-RF2" id="bEa-za-Z0P"/>
+                        <outlet property="overlayPhotoImageView" destination="Aox-VP-H1D" id="Ft2-2L-Miv"/>
                         <segue destination="U1S-li-kFq" kind="show" identifier="GallerySegue" id="k9z-ZO-Uzk"/>
                     </connections>
                 </viewController>
